--- a/sample_config.env
+++ b/sample_config.env
@@ -12,7 +12,7 @@ TG_BOT_TOKEN = "10010102:2abcdefghijklmnopqrstuvwxyz"
 ADMINS = "1234567890"
 
 # Masukan Username Telegram mu tanpa @
-OWNER = "eldipion"
+OWNER = "jambu"
 
 # Masukan Chat ID dari Group Untuk Wajib Subscribenya
 # Bila tidak ingin dipakai Fsubnya, isi dengan 0
@@ -21,6 +21,13 @@ FORCE_SUB_GROUP = 0
 # Masukan Chat ID dari Channel Untuk Wajib Subscribenya
 # Bila tidak ingin dipakai Fsubnya, isi dengan 0
 FORCE_SUB_CHANNEL = 0
+
+# Bila tidak ingin dipakai Fsubnya, isi dengan 0
+FORCE_SUB_GROUP = 1
+
+# Masukan Chat ID dari Channel Untuk Wajib Subscribenya
+# Bila tidak ingin dipakai Fsubnya, isi dengan 0
+FORCE_SUB_CHANNEL = 1
 
 # Masukan ID Channel Untuk [Channel Database]
 CHANNEL_ID = -100
